# HamVibe

./: .gitignore  CMakeLists.txt  HamVibe.pro  HamVibe_app.pro  TODO.txt  calllookup.cpp  calllookup.h  calls.txt  country.cpp  country.h  delegate.h  frequencylabel.cpp  frequencylabel.h  hamvibe.db  hamvibe.qss  import_log.py  log.csv  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rig.cpp  rig.h  spotparser.cpp  spotparser.h  tcplistener.cpp  tcplistener.h  tcpreceiver.cpp  tcpreceiver.h  wwa.py  wwa_activators_2026.csv
tests/: country_test.cpp  frequencylabel_test.cpp  main_test.cpp  rig_test.cpp  tcpreceiver_test.cpp  tests.pro  tst_frequencylabel.cpp
tests/calllookup/: calllookup.pro  tst_calllookup.cpp
tests/spotparser/: spotparser.pro  tst_spotparser.cpp
